--- a/ai.server/config.yaml
+++ b/ai.server/config.yaml
@@ -1,7 +1,7 @@
 name: CodeProject AI.Server (CPU)
 version: 2.5.1
 url: https://hub.docker.com/r/codeproject/ai-server
-image: ghcr.io/skrashevich/hassio-addon-ai.server-{arch}
+image: codeproject/ai-server
 panel_icon: mdi:face-recognition
 slug: ai.server
 description: standalone open-source AI server
