--- a/ai.server/config.yaml
+++ b/ai.server/config.yaml
@@ -1,4 +1,4 @@
-name: CodeProject AI.Server (CPU)
+name: CodeProject AI.Server (CORAL)
 version: 2.5.1
 url: https://hub.docker.com/r/codeproject/ai-server
 image: codeproject/ai-server
